--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,17 +2,16 @@ name: CI/CD Monorepo
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "apps/**"
-      - "config/**"
+    tags:
+      - "api-v*"
+      - "admin-v*"
+      - "site-v*"
 
 jobs:
   build-api:
     name: 📡 API - NestJS
+    if: startsWith(github.ref, 'refs/tags/api-v')
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'apps/api') || contains(github.event.head_commit.message, 'config')
     steps:
       - name: ⬇️ Checkout do código
         uses: actions/checkout@v3
@@ -31,12 +30,12 @@ jobs:
         run: npm run build
 
       - name: 📤 Deploy da API (simulado)
-        run: echo "✅ Deploy da API concluído!"
+        run: echo "✅ Deploy da API via tag concluído!"
 
   build-admin:
     name: 🛠️ Admin - Painel Next.js
+    if: startsWith(github.ref, 'refs/tags/admin-v')
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'apps/admin') || contains(github.event.head_commit.message, 'config')
     steps:
       - name: ⬇️ Checkout do código
         uses: actions/checkout@v3
@@ -54,13 +53,13 @@ jobs:
         working-directory: apps/admin
         run: npm run build
 
-      - name: 📤 Deploy do Admin (simulado)
-        run: echo "✅ Deploy do Painel concluído!"
+      - name: 📤 Deploy do Admin via tag
+        run: echo "✅ Deploy do Painel via tag concluído!"
 
   build-site:
     name: 🌐 Site - Next.js
+    if: startsWith(github.ref, 'refs/tags/site-v')
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'apps/site') || contains(github.event.head_commit.message, 'config')
     steps:
       - name: ⬇️ Checkout do código
         uses: actions/checkout@v3
@@ -78,5 +77,5 @@ jobs:
         working-directory: apps/site
         run: npm run build
 
-      - name: 📤 Deploy do Site (simulado)
-        run: echo "✅ Deploy do Site concluído!"
+      - name: 📤 Deploy do Site via tag
+        run: echo "✅ Deploy do Site via tag concluído!"
