--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,27 +2,51 @@ name: CI/CD Monorepo
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "apps/**"
-      - "config/**"
+    tags:
+      - "v*" # Ex: v1.0.0, v2.3.1
 
 jobs:
-  build-api:
-    name: 📡 API - NestJS
+  changes:
+    name: 🕵️ Detectar alterações
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'apps/api') || contains(github.event.head_commit.message, 'config')
+    outputs:
+      api: ${{ steps.filter.outputs.api }}
+      admin: ${{ steps.filter.outputs.admin }}
+      site: ${{ steps.filter.outputs.site }}
+
     steps:
       - name: ⬇️ Checkout do código
         uses: actions/checkout@v3
+
+      - name: 📂 Verificar arquivos alterados
+        id: filter
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            api:
+              - 'apps/api/**'
+              - 'config/**'
+            admin:
+              - 'apps/admin/**'
+              - 'config/**'
+            site:
+              - 'apps/site/**'
+              - 'config/**'
+
+  build-api:
+    name: 📡 Build & Deploy API
+    needs: changes
+    if: needs.changes.outputs.api == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
       - name: ⚙️ Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: 📦 Instala dependências
+      - name: 📦 Instalar dependências
         working-directory: apps/api
         run: npm ci
 
@@ -30,23 +54,23 @@ jobs:
         working-directory: apps/api
         run: npm run build
 
-      - name: 📤 Deploy da API (simulado)
-        run: echo "✅ Deploy da API concluído!"
+      - name: 🚀 Simular Deploy
+        run: echo "✅ Deploy da API com a tag ${{ github.ref_name }} concluído!"
 
   build-admin:
-    name: 🛠️ Admin - Painel Next.js
+    name: 🛠️ Build & Deploy Admin
+    needs: changes
+    if: needs.changes.outputs.admin == 'true'
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'apps/admin') || contains(github.event.head_commit.message, 'config')
     steps:
-      - name: ⬇️ Checkout do código
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: ⚙️ Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: 📦 Instala dependências
+      - name: 📦 Instalar dependências
         working-directory: apps/admin
         run: npm ci
 
@@ -54,23 +78,23 @@ jobs:
         working-directory: apps/admin
         run: npm run build
 
-      - name: 📤 Deploy do Admin (simulado)
-        run: echo "✅ Deploy do Painel concluído!"
+      - name: 🚀 Simular Deploy
+        run: echo "✅ Deploy do Admin com a tag ${{ github.ref_name }} concluído!"
 
   build-site:
-    name: 🌐 Site - Next.js
+    name: 🌐 Build & Deploy Site
+    needs: changes
+    if: needs.changes.outputs.site == 'true'
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'apps/site') || contains(github.event.head_commit.message, 'config')
     steps:
-      - name: ⬇️ Checkout do código
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: ⚙️ Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: 📦 Instala dependências
+      - name: 📦 Instalar dependências
         working-directory: apps/site
         run: npm ci
 
@@ -78,5 +102,5 @@ jobs:
         working-directory: apps/site
         run: npm run build
 
-      - name: 📤 Deploy do Site (simulado)
-        run: echo "✅ Deploy do Site concluído!"
+      - name: 🚀 Simular Deploy
+        run: echo "✅ Deploy do Site com a tag ${{ github.ref_name }} concluído!"
