--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
+# docker-compose.yml - VERSÃO CORRIGIDA
 services:
   site:
     build:
-      context: ./apps/site
-      dockerfile: Dockerfile
+      context: . # ← MUDE PARA CONTEXTO RAIZ
+      dockerfile: apps/site/Dockerfile
     container_name: shopping-site
     ports:
       - "3000:3000"
@@ -14,8 +15,8 @@ services:
 
   admin:
     build:
-      context: ./apps/admin
-      dockerfile: Dockerfile
+      context: . # ← MUDE PARA CONTEXTO RAIZ
+      dockerfile: apps/admin/Dockerfile
     container_name: shopping-admin
     ports:
       - "3001:3000"
@@ -27,11 +28,11 @@ services:
 
   api:
     build:
-      context: ./apps/api
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: apps/api/Dockerfile
     container_name: shopping-api
     ports:
-      - "3002:3000"
+      - "3002:8000"
     env_file:
       - ./apps/api/.env
     depends_on:
